[package]
name = "cpf_util"
version = "0.1.1"
authors = ["Rodolfo Ghiggi <rodolfoghi@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Format and validate CPF, Brazil's ID number.
"""
repository = "https://github.com/rodolfoghi/cpf-util-rust"
documentation = "https://docs.rs/cpf_util"
keywords = ["parser", "format", "validation", "cpf"]
categories = ["parser-implementations", "value-formatting", "no-std"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
